[gd_scene load_steps=5 format=2]

[ext_resource path="res://imagens/matriz_new.png" type="Texture" id=1]
[ext_resource path="res://Script/Matriz.gd" type="Script" id=2]
[ext_resource path="res://Script/letras/PressStart2P.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Eisenhower360" type="Sprite" parent="."]
position = Vector2( 377, 259 )
scale = Vector2( 0.199667, 0.187507 )
texture = ExtResource( 1 )
offset = Vector2( -159.944, 211.082 )

[node name="Analise" type="Button" parent="."]
margin_left = 255.0
margin_top = 499.0
margin_right = 438.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( -705, -559 )
text = "Enviar matriz para análise"

[node name="IU_menos" type="Button" parent="."]
margin_left = 148.0
margin_top = 98.0
margin_right = 168.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 175, 22 )
text = "-"

[node name="IU_mais" type="Button" parent="."]
margin_left = 273.0
margin_top = 98.0
margin_right = 293.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 51, 22 )
text = "+"

[node name="INU_menos" type="Button" parent="."]
margin_left = 399.0
margin_top = 96.0
margin_right = 419.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( -127, 20 )
text = "-"

[node name="INU_mais" type="Button" parent="."]
margin_left = 524.0
margin_top = 96.0
margin_right = 544.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( -251, 20 )
text = "+"

[node name="NIU_menos" type="Button" parent="."]
margin_left = 152.0
margin_top = 321.0
margin_right = 172.0
margin_bottom = 341.0
rect_pivot_offset = Vector2( 197, -41 )
text = "-"

[node name="NIU_mais" type="Button" parent="."]
margin_left = 277.0
margin_top = 321.0
margin_right = 297.0
margin_bottom = 341.0
rect_pivot_offset = Vector2( 73, -41 )
text = "+"

[node name="NINU_menos" type="Button" parent="."]
margin_left = 399.0
margin_top = 321.0
margin_right = 419.0
margin_bottom = 341.0
text = "-"

[node name="NINU_mais" type="Button" parent="."]
margin_left = 524.0
margin_top = 321.0
margin_right = 544.0
margin_bottom = 341.0
text = "+"

[node name="LblImportanteUrgente" type="Label" parent="."]
margin_left = 119.0
margin_top = 126.0
margin_right = 311.0
margin_bottom = 277.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"
align = 1
autowrap = true

[node name="LblImportanteNUrgente" type="Label" parent="."]
margin_left = 360.0
margin_top = 129.0
margin_right = 576.0
margin_bottom = 281.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"
align = 1
autowrap = true

[node name="LblNImportanteUrgente" type="Label" parent="."]
margin_left = 120.0
margin_top = 351.0
margin_right = 312.0
margin_bottom = 470.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"
align = 1
autowrap = true

[node name="LblNImportanteNUrgente" type="Label" parent="."]
margin_left = 360.0
margin_top = 351.0
margin_right = 576.0
margin_bottom = 463.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Tempo: 0h"
align = 1
autowrap = true

[node name="ProgressBarImpUrg" type="ProgressBar" parent="."]
margin_left = 178.0
margin_top = 98.0
margin_right = 264.0
margin_bottom = 119.0
max_value = 24.0

[node name="ProgressBarImpNUrg" type="ProgressBar" parent="."]
margin_left = 429.0
margin_top = 96.0
margin_right = 515.0
margin_bottom = 117.0
max_value = 24.0

[node name="ProgressBarNImpUrg" type="ProgressBar" parent="."]
margin_left = 182.0
margin_top = 321.0
margin_right = 268.0
margin_bottom = 342.0
rect_pivot_offset = Vector2( 91, -118 )
max_value = 24.0

[node name="ProgressBarNImpNUrg" type="ProgressBar" parent="."]
margin_left = 429.0
margin_top = 321.0
margin_right = 515.0
margin_bottom = 342.0
max_value = 24.0

[node name="Label" type="Label" parent="."]
margin_left = 672.0
margin_top = 3.0
margin_right = 1026.0
margin_bottom = 467.0
custom_fonts/font = SubResource( 1 )
text = "Distribua as 24 horas do seu dia na matriz!

Segue exemplos de cada item da matriz:
-> Importante e Urgente: Responder a email de clientes, problemas urgentes.

-> Importante e não urgente: Dormir, treinamentos, atividades essencias.

-> Não importante e urgente: Ligações, correspondências, interrupções.

-> Não importante e não Urgente: Assistir vídeos no tiktok, responder grupo de mensagem!

"
autowrap = true

[node name="Jogar" type="Button" parent="."]
margin_left = 256.0
margin_top = 496.0
margin_right = 439.0
margin_bottom = 531.0
rect_pivot_offset = Vector2( -705, -559 )
text = "Jogar!"

[connection signal="pressed" from="Analise" to="." method="_on_Analise_pressed"]
[connection signal="pressed" from="IU_menos" to="." method="_on_IU_menos_pressed"]
[connection signal="pressed" from="IU_mais" to="." method="_on_IU_mais_pressed"]
[connection signal="pressed" from="INU_menos" to="." method="_on_INU_menos_pressed"]
[connection signal="pressed" from="INU_mais" to="." method="_on_INU_mais_pressed"]
[connection signal="pressed" from="NIU_menos" to="." method="_on_NIU_menos_pressed"]
[connection signal="pressed" from="NIU_mais" to="." method="_on_NIU_mais_pressed"]
[connection signal="pressed" from="NINU_menos" to="." method="_on_NINU_menos_pressed"]
[connection signal="pressed" from="NINU_mais" to="." method="_on_NINU_mais_pressed"]
[connection signal="pressed" from="Jogar" to="." method="_on_Jogar_pressed"]
